@@ -607,3 +607,52 @@ str_ccmp(const char *s1, const char *s2) {
          return 0;
    }
 }
+
+/*
+ *	my_lookupdev -- Find the default interface name
+ *
+ *	Inputs:
+ *
+ *	errbuf  String to hold error message
+ *
+ *	Returns:
+ *
+ *	The name of the default network interface or NULL if an error occurs.
+ *
+ *	This function is adapted from pcap_lookupdev() which was depreciated
+ *	in libpcap 1.9.0.
+ */
+char *
+my_lookupdev(char *errbuf) {
+   pcap_if_t *alldevs;
+
+#ifndef IF_NAMESIZE
+#define IF_NAMESIZE 8192
+#endif
+
+   static char device[IF_NAMESIZE + 1];
+   char *ret;
+
+   if (pcap_findalldevs(&alldevs, errbuf) == -1)
+      return NULL;
+
+   if (alldevs == NULL || (alldevs->flags & PCAP_IF_LOOPBACK)) {
+      /*
+       * There are no devices on the list, or the first device
+       * on the list is a loopback device, which means there
+       * are no non-loopback devices on the list.  This means
+       * we can't return any device.
+       */
+      (void)strlcpy(errbuf, "no suitable device found", PCAP_ERRBUF_SIZE);
+      ret = NULL;
+   } else {
+      /*
+       * Return the name of the first device on the list.
+       */
+      (void)strlcpy(device, alldevs->name, sizeof(device));
+      ret = device;
+   }
+
+   pcap_freealldevs(alldevs);
+   return ret;
+}
