@@ -96,42 +96,3 @@ Strtol(const char *nptr, int base) {
 
    return result;
 }
-
-/*
- * my_lookupdev() is adapted from pcap_lookupdev() which is depreciated
- * in libpcap 1.9.0 and later.
- */
-char *
-my_lookupdev(char *errbuf) {
-   pcap_if_t *alldevs;
-
-#ifndef IF_NAMESIZE
-#define IF_NAMESIZE 8192
-#endif
-
-   static char device[IF_NAMESIZE + 1];
-   char *ret;
-
-   if (pcap_findalldevs(&alldevs, errbuf) == -1)
-      return NULL;
-
-   if (alldevs == NULL || (alldevs->flags & PCAP_IF_LOOPBACK)) {
-      /*
-       * There are no devices on the list, or the first device
-       * on the list is a loopback device, which means there
-       * are no non-loopback devices on the list.  This means
-       * we can't return any device.
-       */
-      (void)strlcpy(errbuf, "no suitable device found", PCAP_ERRBUF_SIZE);
-      ret = NULL;
-   } else {
-      /*
-       * Return the name of the first device on the list.
-       */
-      (void)strlcpy(device, alldevs->name, sizeof(device));
-      ret = device;
-   }
-
-   pcap_freealldevs(alldevs);
-   return ret;
-}
